# pisum-transcript

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pisum-langue.code-workspace  pisum-transcript.code-workspace  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: IMPL-ci-code-quality.md  IMPL-package-manager-distribution.md  IMPL-remove-openai-provider.md  IMPL-start-stop-recording.md  IMPL-transcription.md  IMPL-whisper-local-transcription.md  PRD-13-ci-code-quality.md  PRD-file-logging.md  PRD-package-manager-distribution.md  PRD-remove-openai-provider.md  PRD-start-stop-recording.md  PRD-transcription-and-translation.md  PRD-transcription.md  PRD-whisper-local-transcription.md  Whisper.cpp with whisper-rs is the clear choice for your Tauri app.md
scripts/: patch-whisper-bindings.js
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: macos-postinstall.sh
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  tray.rs
src-tauri/src/ai/: gemini.rs  mod.rs  openai.rs  pool.rs  provider.rs  whisper.rs
src-tauri/src/audio/: encoder.rs  recorder.rs
src-tauri/src/config/: manager.rs  mod.rs  presets.rs  schema.rs
src-tauri/src/hotkey/: conflict.rs  manager.rs  mod.rs  parse.rs
src-tauri/src/output/: clipboard.rs  paste.rs
src-tauri/src/whisper/: models.rs
src-tauri/whisper-bindings/: bindings_windows.rs
src/components/: AudioConfig.svelte  GeneralConfig.svelte  HotkeyConfig.svelte  HotkeyRecorder.svelte  LoggingConfig.svelte  ModeToggle.svelte  PresetConfig.svelte  ProviderConfig.svelte  SettingsPage.svelte  WhisperConfig.svelte
src/lib/: commands.ts  types.ts
src/stores/: settings.ts
