[package]
name = "pisum-langue"
version = "0.1.7"
edition = "2021"

[lib]
name = "pisum_langue_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1.20"
tokio = { version = "1", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
global-hotkey = "0.6"
cpal = "0.15"
audiopus = "0.2"
rubato = "0.16"
ogg = "0.9"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
arboard = "3"
enigo = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
