[package]
name = "pisum-transcript"
version = "1.0.3"
edition = "2021"

[lib]
name = "pisum_transcript_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1.20"
tokio = { version = "1", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "5"
global-hotkey = "0.6"
cpal = "0.15"
audiopus = "0.2"
rubato = "0.16"
ogg = "0.9"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
base64 = "0.22"
arboard = "3"
enigo = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
rolling-file = "0.2"
open = "5"
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }
whisper-rs = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }
whisper-rs = "0.16"

[profile.dev.package.whisper-rs-sys]
opt-level = 3

[profile.dev.package.whisper-rs]
opt-level = 3

[profile.dev.package.rubato]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
